<resources>
    <string name="app_name">"Login "</string>
    <string name="action_settings">Settings</string>

    <!--Main activity-->
    <string name="textView_username">Username:</string>
    <string name="hint_username">Jonhy Deepp</string>
    <string name="textView_password">Password:</string>
    <string name="hint_password">°°°°°°°°°°°</string>
    <string name="button_login">Login</string>
    <string name="emptyString" />

</resources>
